fix missing margin

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -82,7 +82,6 @@ a.icon:active {
   margin-bottom: 0rem;
   box-shadow: 0 0.12rem 0.9rem rgba(0, 0, 0, 0.5) !important;
   border-radius: 0 0 0 0;
-  margin-top: 57px;
 }
 
 /* Arrow Breadcrumb */
